DASH-2082 splite pages

--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -63,6 +63,8 @@
 <link rel="import" href="directory/appsco-directory-add-account.html">
 <link rel="import" href="directory/appsco-directory-import-accounts.html">
 
+<link rel="import" href="provisioning/appsco-start-integration.html">
+
 <link rel="import" href="upgrade/appsco-upgrade-action.html">
 <link rel="import" href="billing/appsco-subscription-cancel.html">
 <link rel="import" href="billing/appsco-credit-card.html">
@@ -658,7 +660,17 @@
                             name="provisioning"
                             company-api="[[ companyApi ]]"
                             authorization-token="[[ authorizationToken ]]"
+                            on-start-authorization="_onStartAuthorization"
+                            on-integration-setup="_onIntegrationSetup"
                     ></appsco-provisioning-page>
+
+                    <appsco-provisioning-settings-page
+                            id="appscoProvisioningSettingsPage"
+                            name="provisioning-settings"
+                            company-api="[[ companyApi ]]"
+                            authorization-token="[[ authorizationToken ]]"
+                            integration="[[ _selectedIntegration ]]"
+                    ></appsco-provisioning-settings-page>
 
                     <appsco-audit-log-page
                             id="appscoAuditLogPage"
@@ -891,6 +903,13 @@
                 on-invoice-sent="_onInvoiceSent">
         </appsco-billing-send-invoice>
 
+        <appsco-start-integration
+                id="appscoStartIntegration"
+                account="[[ account ]]"
+                authorization-token="[[ authorizationToken ]]"
+                company-api="[[ companyApi ]]">
+        </appsco-start-integration>
+
         <template is="dom-if" if="[[ api.me ]]">
             <iron-ajax auto
                        url="[[ api.me ]]"
@@ -1048,6 +1067,14 @@
                     value: function() {
                         return [];
                     }
+                },
+
+                /**
+                 * Selected integration for provisioning settings
+                 */
+                _selectedIntegration: {
+                    type: Object,
+                    value: function() { return {}; }
                 },
 
                 /**
@@ -1251,6 +1278,9 @@
 
                     case 'company-settings':
                         return 'Company Settings';
+
+                    case 'provisioning-settings':
+                        return 'Provisioning -> Setup';
 
                     case 'audit-log':
                         return 'Audit Log';
@@ -2269,6 +2299,23 @@
              */
 
             /**
+             * Provisioning page Start
+             */
+
+            _onStartAuthorization: function(event) {
+                this.$.appscoStartIntegration.setIntegration(event.detail.integration);
+                this.$.appscoStartIntegration.toggle();
+            },
+
+            _onIntegrationSetup: function(event) {
+                this._selectedIntegration = event.detail.integration;
+                this.set('routeData.page', 'provisioning-settings');
+            },
+            /**
+             * Provisioning page end
+             */
+
+            /**
              * Billing page START
              */
             _onResourceActionBillingPage: function() {
@@ -2389,6 +2436,7 @@
                         page === 'manage-account' ||
                         page === 'statistics' ||
                         page === 'provisioning' ||
+                        page === 'provisioning-settings' ||
                         page === 'billing' ||
                         page === 'company-settings' ||
                         page === 'audit-log');
