DASH-2079 changed message in invoice dialog

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 </head>
 <body>
-<appsco-app domain="https://my-dev.appsco.com"></appsco-app>
+<appsco-app domain="http://appsco.loc/app_dev.php" authorization-token="ndOqQ5sTlQCKN_M66tdzgj5KDMtQbLVRcjqXuQr-rYAUxhyU8l-foxUhbV2yZTg8J4_bXteFcUz2jN_etqUcpE"></appsco-app>
+<!--<appsco-app domain="https://my-dev.appsco.com" authorization-token="6fbd320afc3d9e5ee4ea4f352940355b"></appsco-app>-->
+<!--<appsco-app domain="https://appsco.com" authorization-token="sF8eVTSfTygpV2h0gxwkml2EudWdJSd_yDapAGP_QasMzQopgCpgPFJDgomNv5zv2Oj9fzf_a9TUhHsd7h4fKQ"></appsco-app>-->
 <!-- Built with love using Polymer Starter Kit -->
 </body>
 </html>
