DASH-2441 added claims on resource add dialogs

--- a/src/applications/appsco-dialog-application-company-add.html
+++ b/src/applications/appsco-dialog-application-company-add.html
@@ -142,6 +142,10 @@
                 }
             },
 
+            setAction: function (action) {
+                this.$.appscoApplicationAddSettings.setAction(action);
+            },
+
             setApplicationTemplate: function(applicationTpl) {
                 this.applicationTemplate = applicationTpl;
             },
