--- a/src/appsco-billing-report-page.html
+++ b/src/appsco-billing-report-page.html
@@ -4,11 +4,16 @@
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
+<link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-styles/shadow.html">
 
 <link rel="import" href="components/page/appsco-content.html">
 <link rel="import" href="components/components/appsco-page-behavior.html">
 <link rel="import" href="appsco-page-styles.html">
 <link rel="import" href="components/customer/appsco-customers-billing.html">
+<link rel="import" href="components/components/appsco-search.html">
 
 <dom-module id="appsco-billing-report-page">
     <template>
@@ -17,6 +22,12 @@
                 display: block;
 
                 --resource-width: 318px;
+                --paper-dropdown-menu: {
+                    display: block;
+                }
+            }
+            :host paper-item:hover {
+                @apply(--paper-item-hover);
             }
             :host div[resource] {
                 height: 100%;
@@ -25,7 +36,7 @@
             :host div[content] > * {
                 padding: 0 10px 10px 10px;
             }
-            .resource-container {
+            :host .resource-container {
                 @apply(--layout-vertical);
                 height: 100%;
             }
@@ -39,11 +50,42 @@
             :host .flex-vertical {
                 @apply(--layout-vertical);
             }
+            :host .resource-header {
+                border-bottom: 1px solid var(--divider-color);
+                padding: 10px;
+                position: relative;
+            }
             :host([tablet-screen]) {
                 --resource-width: 250px;
             }
             :host([mobile-screen]) {
                 --resource-width: 0;
+            }
+            .filter {
+                position: relative;
+            }
+            paper-listbox.searchable {
+                @apply(--shadow-elevation-2dp);
+                width: 100%;
+                min-height: 100px;
+                max-height: calc(100vh - 2*64px - 20px - 45px - 2*54px);
+                overflow-y: auto;
+                position: absolute;
+                top: 50px;
+                left: 0;
+                z-index: 10;
+                opacity: 1;
+                visibility: visible;
+                transform: scale(1, 1);
+                transform-origin: top center;
+                transition: all 0.2s linear;
+            }
+            paper-listbox[hidden] {
+                opacity: 0;
+                visibility: hidden;
+                transform: scale(1, 0.6);
+                transform-origin: top center;
+                transition: all 0.1s linear;
             }
         </style>
 
@@ -53,7 +95,72 @@
 
         <appsco-content id="appscoContent" resource-active on-component-ready="_onPageLoaded">
             <div class="flex-vertical" resource>
-                <div class="resource-container"></div>
+                <div class="resource-container">
+                    <div class="resource-header">
+                        Filters
+                    </div>
+
+                    <div class="filters">
+                        <div class="filter">
+                            <appsco-search id="filterCustomers"
+                                           label="Filter customers"
+                                           float-label
+                                           on-keyup = "_onFilterCustomersKeyup"
+                                           on-search="_onFilterCustomersSearch"
+                                           on-blur="_onFilterCustomersBlur"
+                                           on-search-clear="_onFilterCustomersSearchClear">
+                            </appsco-search>
+                            <paper-listbox id="suggestedCustomers"
+                                           class="dropdown-content searchable"
+                                           attr-for-selected="label"
+                                           on-iron-activate="_onFilterCustomers" hidden>
+                                <template is="dom-repeat" items="{{ _customersList }}">
+                                    <paper-item value="[[ item.value ]]"
+                                                label="[[ item.name ]]">[[ item.name ]]</paper-item>
+                                </template>
+                            </paper-listbox>
+                        </div>
+
+                        <div class="filter">
+                            <paper-dropdown-menu id="dropdownPaymentType"
+                                                 label="Filter by payment type"
+                                                 horizontal-align="left">
+                                <paper-listbox id="paymentType"
+                                               class="dropdown-content"
+                                               attr-for-selected="value"
+                                               on-selected-changed="_onPaymentTypeSelect"
+                                               selected="">
+                                    <paper-item value="">All</paper-item>
+                                    <paper-item value="paid_by_partner">Paid by partner</paper-item>
+                                    <paper-item value="paid_by_customer_cc_monthly">Paid by customer monthly</paper-item>
+                                    <paper-item value="paid_by_customer_cc_yearly">Paid by customer yearly</paper-item>
+                                    <paper-item value="trial">Trial</paper-item>
+                                </paper-listbox>
+                            </paper-dropdown-menu>
+                        </div>
+
+                        <div class="filter">
+                            <paper-dropdown-menu id="dropdownPeriod"
+                                                 label="Filter by period"
+                                                 horizontal-align="left">
+                                <paper-listbox id="period"
+                                               class="dropdown-content"
+                                               attr-for-selected="value"
+                                               on-selected-changed="_onPeriodSelect"
+                                               selected="">
+                                    <paper-item value="">All</paper-item>
+                                    <paper-item value="1">1 month</paper-item>
+                                    <paper-item value="2">2 months</paper-item>
+                                    <paper-item value="3">3 months</paper-item>
+                                    <paper-item value="6">6 months</paper-item>
+                                    <paper-item value="9">9 months</paper-item>
+                                    <paper-item value="12">12 months</paper-item>
+                                </paper-listbox>
+                            </paper-dropdown-menu>
+                        </div>
+
+                    </div>
+                </div>
             </div>
 
             <div content>
@@ -61,10 +168,10 @@
                     <appsco-customers-billing
                             id="appscoCustomers"
                             type="customer"
-                            size="100"
                             load-more
+                            size="10000"
                             authorization-token="[[ authorizationToken ]]"
-                            list-api="[[ customersApi ]]"
+                            list-api="[[ billingReportApi ]]"
                             on-list-loaded="_onCustomersLoaded"
                             on-list-empty="_onCustomersEmptyLoad"
                     ></appsco-customers-billing>
@@ -124,12 +231,39 @@
                     value: false
                 },
 
-                customersApi: {
+                billingReportApi: {
                     type: String,
                     value: ''
                 },
 
                 authorizationToken: {
+                    type: String,
+                    value: ''
+                },
+
+                _customersList: {
+                    type: Array,
+                    value: function() {
+                        return [];
+                    }
+                },
+
+                customersApi: {
+                    type: String,
+                    value: ''
+                },
+
+                searchTerm: {
+                    type: String,
+                    value: ''
+                },
+
+                paymentType: {
+                    type: String,
+                    value: ''
+                },
+
+                period: {
                     type: String,
                     value: ''
                 }
@@ -167,6 +301,100 @@
 
             _onCustomersEmptyLoad: function() {
                 this._onPageLoaded();
+            },
+
+            _onFilterCustomersKeyup: function() {
+                this._showCustomersList();
+            },
+
+            _onFilterCustomersSearch: function (event) {
+               this._filterCustomerListByTerm(event.detail.term)
+            },
+
+            _filterCustomerListByTerm: function(term) {
+                this.searchTerm = term;
+                this.set('_customersList', []);
+                this._getCustomersByTerm().then(function(customers) {
+
+                    customers.forEach(function (element) {
+                        this.push('_customersList', {
+                            value: element.self,
+                            name: element.name
+                        });
+                    }.bind(this));
+
+                }.bind(this));
+                this.filterList();
+            },
+
+            _onFilterCustomersBlur: function() {
+                this._hideCustomersList();
+            },
+
+            _onFilterCustomersSearchClear: function() {
+                this.$.filterCustomers.reset();
+                this.$.suggestedCustomers.selected = 0;
+                this.searchTerm = '';
+                this.filterList();
+            },
+
+            _onFilterCustomers: function(event) {
+                var selected = event.detail.selected;
+                this.searchTerm = selected;
+                this.$.filterCustomers.setValue(selected);
+                this.filterList();
+                this._hideCustomersList();
+            },
+
+            _showCustomersList: function() {
+                this.$.suggestedCustomers.hidden = false;
+            },
+
+            _hideCustomersList: function() {
+                this.$.suggestedCustomers.hidden = true;
+            },
+
+            _onPaymentTypeSelect: function(event) {
+                var selected = event.detail;
+                if (selected) {
+                    this.paymentType = selected.value;
+                }
+                this.filterList();
+            },
+
+            _onPeriodSelect: function(event) {
+                var selected = event.detail;
+                if (selected) {
+                    this.period = selected.value;
+                }
+                this.filterList();
+            },
+
+            filterList: function() {
+                this.$.appscoCustomers.filter(this.searchTerm, this.paymentType, this.period);
+            },
+
+            _getCustomersByTerm: function() {
+                var apiUrl = this.customersApi + '?term=' + this.searchTerm + '&extended=true&limit=50';
+                return new Promise(function(resolve, reject) {
+                    var request = document.createElement('iron-request'),
+                        options = {
+                            url: apiUrl,
+                            method: 'GET',
+                            handleAs: 'json',
+                            headers: {'Authorization': 'token ' + this.authorizationToken}
+                        };
+
+                    request.send(options).then(function() {
+
+                        if (request.response) {
+                            resolve(request.response.customers);
+                        }
+
+                    }, function() {
+                        reject(request.response.message);
+                    });
+                }.bind(this));
             }
 
         });
