--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -533,9 +533,9 @@
                                     <a name="customer-billing" href="#">
                                         <iron-icon icon="icons:payment"></iron-icon> <span class="menu-text">Customer Billing</span>
                                     </a>
-                                    <a name="billing-report" href="#">
-                                        <iron-icon icon="icons:description"></iron-icon><span class="menu-text">Billing Report</span>
-                                    </a>
+                                    <!--<a name="billing-report" href="#">-->
+                                        <!--<iron-icon icon="icons:description"></iron-icon><span class="menu-text">Billing Report</span>-->
+                                    <!--</a>-->
 
                                 </template>
 
